syntax = "proto3";

package nl.toefel.postalorder;

service PostalOrderService {
    rpc CreateShipment (CreateShipmentRequest) returns (Shipment) {}
    rpc GetStatusUpdates (ShipmentStatusRequest) returns (stream ParcelStatus) {}
}

message CreateShipmentRequest {
    ShipmentType type = 1;
    repeated Parcel parcels = 2;
}

message CreateShipmentResponse {
    Shipment shipment = 1;
}

message ShipmentStatusRequest {
    string shipment_id = 1;
    bool includeOld = 2;
}

message ParcelStatus {
    string shipment_id = 1;
    Status status = 2;

    oneof details {
        ProofOfDeliveryDetails delivery = 3;
        OnTrainDetails train = 4;
    }
}

enum Status {
    CREATED = 0;
    SORTED = 1;
    ON_TRAIN = 2;
    DELIVERED = 3;
    REJECTED = 4;
}

message ProofOfDeliveryDetails {
    string signed_by = 1;
    bytes signature = 2;
}

message OnTrainDetails {
    string train = 1;
    string geolocation = 2;
}

message Shipment {
    string shipment_id = 1;
    ShipmentType type = 2;
    repeated Parcel parcels = 3;
}

enum ShipmentType {
    DELIVERY = 0;
    PICKUP = 1;
}

message Parcel {
    string id = 1;
    Size size = 2;
    int32 weigh_in_grams = 3;
}

message Size {
    int32 length_cm = 1;
    int32 width_cm = 2;
    int32 height_cm = 3;
}

